sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:6: error: not found: value wpt
    wpt = 0
    ^