sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var l = getNombreValeurs() - 2
	var cpt = 1
  while (cpt != 0) {
    wpt = 0
    for (i <- 0 to l){
      if (plusPetit(i+1,i)) {
        echange(i,i+1)
        cpt += 1
      }
    }
    for (i <- l to 0) {
      if (plusPetit(i,i+1)) {
        echange(i,i+1)
        cpt += 1
      }
    }
  }
}
